fix: adjust companyMarquee layout, fix button padding & whitespace

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -147,3 +147,8 @@ input {
     display: none; /* Chrome, Safari and Opera */
   }
 }
+
+/* sigin footer color  */
+.cl-footer {
+  background-color: transparent;
+}
